Fix terminology.html navigation and term overlap

--- a/assets/css/terminology.css
+++ b/assets/css/terminology.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-
+  font-family: 'Exo 2';
 }
 html {
   font-size: 16px;
@@ -11,6 +11,7 @@ body {
 }
 
 main {
+  padding-top: 3%;
   padding-left: 5%;
   padding-right: 5%;
   display: grid;
